{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "706e3e9d-80c2-4cd3-b6e9-32f8f9f19b5f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "4d5a7a6c-9a64-4866-9bd9-b9fe75ee1599",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "371b7470-d637-464d-a3aa-8f8732fab337",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bf5697ab-01e7-471a-b5b4-2860ad099f4f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "dec72c7c-9638-4ff3-9e7b-83c7ecb82f93",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "13b93c45-70cd-4bdc-8394-8c32ba636f63",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3bf3d046-07f9-4e96-a7a5-24cafe1a9a54",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "8973a5f5-945c-4c24-adb5-6edf7eeba84c",
            "actions": [
                {
                    "name": "Mouse",
                    "type": "Value",
                    "id": "4ab82491-0838-4371-84e9-6e7c2a2e87a9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "40aabb56-90ef-4c16-aa4e-7e09be0d083b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Shoot",
            "id": "86f486f4-d858-4ca9-b049-b86749dd1847",
            "actions": [
                {
                    "name": "Fire1",
                    "type": "Button",
                    "id": "2072a259-3d46-46a2-9496-b46b77e3747d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5f5aa9a1-9401-444f-9eaf-652ca8451b95",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}